--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/colors": "^1.2.1",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
@@ -29,6 +30,7 @@
     "@types/hpp": "^0.2.1",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
+    "axios": "^0.20.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
